FINAL FINAL submission with body overflow corrected

--- a/css/assignment4.css
+++ b/css/assignment4.css
@@ -6,7 +6,6 @@ body {
     background-image: url("http://f.fwallpapers.com/images/glow-dark.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
     margin: 0;
 }
 
